# productmap

./: .gitignore  Cargo.toml  README.md  run.sh
src/: main.rs  main2.rs
templates/: #index.html#  .#index.html  base.html  category.html  home.html  product.html  sku.html
