[package]
name = "productmap"
version = "1.0.0"
authors = ["Myridia <info@myridia.com>"]
edition = "2024"
publish = false

[dependencies]
tera = { version = "*", default-features = false }
couch_rs = {version ="*"}
serde_json = {version ="*"}
tokio = {version = "*", features = ["full"]}
tokio-util = {version = "*", features = ["full"]}
anyhow = {version = "*"}

